# AntiCopyRight

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/src/DocumentManager/: DocReader.cpp  DocReader.hpp
lib/src/Network/: NetworkManager.cpp  NetworkManager.hpp  ReplyTypes.hpp  RequestTypes.hpp
lib/src/TextAnalyzer/: Lemmatizer.cpp  Lemmatizer.hpp  TextAnalyzer.cpp  TextAnalyzer.hpp
lib/src/TextAnalyzer/Lemmantizer/: Lemmatizer.cpp  Lemmatizer.hpp
lib/src/TextAnalyzer/Model/: Doc2VecModel.cpp  Doc2VecModel.hpp
lib/src/Util/: util.cpp  util.hpp
lib/test/: macros_test.cpp  test.cpp  test_model_func.cpp  test_network.cpp  test_text_analyzer.cpp  test_utils.cpp
lib/test/QtUnitTests/: CMakeLists.txt  QtNetworkTests.cpp
src/: main.cpp
src/QmlModels/: courselistmodel.cpp  courselistmodel.hpp  coursworkslistmodel.cpp  coursworkslistmodel.hpp  proxymodel.cpp  proxymodel.hpp
src/qml/: CourseItem.qml  Main.qml  SideBar.qml
